# Omega

./: CMakeLists.txt
cmake/: CompileGLSL.cmake  Package.cmake
src/: CMakeLists.txt  Loader.cpp  Loader.h  Omega.h  Saver.cpp  Saver.h  Structures.cpp  Structures.h  Timer.cpp  Timer.h
src/impl/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  Codec.cpp  Codec.h  Context.cpp  Context.h  Conversion.cpp  Conversion.h  Decoder.cpp  Decoder.h  Frame.cpp  Frame.h
src/tests/: CMakeLists.txt
src/tests/audio/: CMakeLists.txt
src/tests/audio/audio_playing/: CMakeLists.txt  Test.cpp
src/tests/video/: CMakeLists.txt
src/tests/video/video_playing/: CMakeLists.txt  Test.cpp
src/tests/video/video_to_png/: CMakeLists.txt  Test.cpp
